<resources>
    <string name="app_name">Parked Car - Owner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="go_to_signup">Create an account</string>
    <string name="username">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone No</string>
    <string name="signup">Sign Up</string>
    <string name="go_to_login">Already have an account.</string>
    <string name="active_spaces">Active</string>
    <string name="booked_spaces">Booked</string>
    <string name="disabled_spaces">Disabled</string>
    <string name="address">Address</string>
    <string name="base_fare">Base Fare</string>
    <string name="requests">Requests</string>
    <string name="rating">rating</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="name">Name</string>
    <string name="date_and_time">Date and Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitude_colon">Latitude:</string>
    <string name="longitude_colon">Longitude:</string>
    <string name="request_auto_approval">Request Auto Approval</string>
    <string name="cc_camera">CC Camera</string>
    <string name="guards">Guards</string>
    <string name="indoor">Indoor</string>
    <string name="preview">Preview</string>
    <string name="submit">Submit</string>
    <string name="add_photos">Add Photos</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="length_col">Length:</string>
    <string name="width_col">Width: </string>
    <string name="height_col">Height: </string>
    <string name="disable">Disable</string>
    <string name="activate">Activate</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="disabled">Disabled</string>
    <string name="requested">Requested</string>
    <string name="dashboard">Dashboard</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Log Out</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="space_name">Demo Address Name</string>
    <string name="edit_space">Edit Space</string>
    <string name="show_requests">Requests</string>
    <string name="earning">Earning</string>
    <string name="city">City</string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_info">Booking Info</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="location_address">Location Address</string>
    <string name="rate_now">Rate Now</string>
    <string name="demo_booking_id"># 123456789</string>
    <string name="request_again">Request Again</string>
    <string name="receipt">Receipt</string>
    <string name="status">Status</string>
    <string name="add_additional_review">Add additional Review</string>
    <string name="placeholder_name">Md Anwar Hossen</string>
    <string name="payment">Payment</string>
    <string name="confirm_cash_payment">Confirm Cash Payment</string>
    <string name="time_fare">Time Fare</string>
    <string name="skip">skip</string>
    <string name="current_bookings">Current</string>
    <string name="upcoming_bookings">Upcoming</string>
    <string name="previous_bookings">Previous</string>
    <string name="total_fare">Total Fare</string>
    <string name="current_requests_and_bookings">Current Requests and Bookings</string>
    <string name="upcoming_requests_and_bookings">Upcoming Bookings</string>
    <string name="previous_bookings_and_requests">Previous Requests and Bookings</string>
    <string name="accepted">Accepted</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="show_cancelled_declined_bookings">Show Cancelled Bookings</string>
</resources>