<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group_main">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard"
            />
        <item
            android:id="@+id/nav_bookings"
            android:title="@string/bookings"
            />
    </group>
    <group
        android:id="@+id/group_secondary">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            />
    </group>
</menu>